Name:                pez
Version:             0.1.0
Synopsis:            A Pretty Extraordinary Zipper library
Homepage:            http://coder.bsimmons.name/blog/2011/04/pez-zipper-library-released/

Description:         PEZ is a generic zipper library. It uses lenses from the "fclabels" package to
                     reference a \"location\" to move to in the zipper. The zipper is restricted to
                     types in the 'Typeable' class, allowing the user to \"move up\" through complex data
                     structures such as mutually-recursive types.
                     .
                     Both the Typeable class and fclabels lenses can be derived in GHC, making it
                     easy for the programmer to use a zipper with a minimum of boilerplate.
                     .
                     Please send any feature requests or bug reports along.
                     .
                     Changes 0.0.4 -> 0.1.0:
                     .
                     >  - use fclabels 1.0
                     >  - zipper operations in Maybe by default
                     >  - module renamed Data.Label.Zipper
                     >  - 'ZPath' renamed 'Motion', define new Up type and instance
                     >  - fclabels lenses now require wrapping with 'to'
                     >  - 'moveTo' changed to 'move'
                     >  - savedLens renamed flatten
                     >  - SavedPath renamed To
                     >  - removed experimental operators
                     >  - using failure package for exceptions
                     .
 

License:             BSD3
License-file:        LICENSE
Author:              Brandon Simmons
Maintainer:          brandon.m.simmons@gmail.com

-- A copyright notice.
Copyright:           Brandon Simmons, 2011

-- Stability of the pakcage (experimental, provisional, stable...)
Stability:           Experimental
Category:            Data
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
Extra-source-files:  EXAMPLES/Examples.lhs, PreludeLenses.hs

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2.3

-- if we want to get fancy, see:
--     https://gist.github.com/1343429
--     http://hackage.haskell.org/package/test-framework-0.4.2.0
Test-Suite zipper-tests
    Type:                 exitcode-stdio-1.0
    Main-is:              Tests.hs
    Build-depends:        base, QuickCheck


Library
  -- Modules exported by the library.
  Exposed-modules:     Data.Label.Zipper
 
  GHC-Options:         -Wall

  -- Packages needed in order to build this package.
  Build-depends:       base >= 4 && < 5
                     , fclabels >= 1.0
                     , thrist >= 0.2 && < 0.3
                     , failure >= 0.1

  Extensions:        GeneralizedNewtypeDeriving
                   , TypeOperators
                   , TemplateHaskell
                   , GADTs
                   , DeriveDataTypeable
                   , TupleSections
                   , FlexibleInstances
                   , MultiParamTypeClasses
                   , FunctionalDependencies
  
  -- Modules not exported by this package.
  --Other-modules:     Data.Record.Label.Prelude  
